fixes problem with edit user api